# jobctrl

./: .travis.yml  CMakeLists.txt  Readme.md
.travis.d/: install_dependencies.sh
cmake/: cmake_uninstall.cmake  default_settings.cmake
scripts/: procctrl-setup-db
source/include/: DbInterface.h  Login.h  ProcCtrlInternal.h  Process.h  ProcessManager.h  ProcessManagerClient.h  ProcessManagerServer.h  ServerBrowser.h
source/main/: procctrl-check-group-pwd.cc  procctrl-create-group.cc  procctrl-generate-pwd.cc  procctrl-list-groups.cc  procctrl-remove-group.cc  procctrl-srv.cc  procctrl-subscribe-process-status.cc  procctrl-test-login.cc
source/src/: DbInterface.cc  Process.cc  ProcessManager.cc  ProcessManagerClient.cc  ProcessManagerServer.cc  ServerBrowser.cc
